tests/negative/gold/import-show2-test.gold
tests/negative/import-show2-test.toit:8:3: error: Unresolved identifier: 'b'
  b  // Unresolved.
  ^
Compilation failed
